# my-portal

./: .dockerignore  Makefile  docker-compose.yaml
migration/: Cargo.toml
migration/src/: lib.rs  m20221203_185943_create_tag.rs  m20221203_202947_create_source_platform.rs  m20221203_203001_create_portal_platform.rs  m20221204_012419_create_rule.rs  m20221205_220619_create_tagged_rule.rs  m20221205_230421_create_channel.rs  m20221205_230434_create_tagged_channel.rs  m20221206_000136_create_user.rs  m20221206_000154_create_tagged_user.rs  m20221206_125718_create_message.rs  m20221206_125730_create_tagged_message.rs
rust-lib/: Cargo.toml
rust-lib/src/: lib.rs  re_export.rs
rust-lib/src/custom_error/: mod.rs  option_error.rs
rust-lib/src/database/: active_model.rs  client.rs  error.rs  mod.rs  postgres.rs
rust-lib/src/database/entity/: channel.rs  message.rs  mod.rs  portal_platform.rs  prelude.rs  rule.rs  source_platform.rs  tag.rs  tagged_channel.rs  tagged_message.rs  tagged_rule.rs  tagged_user.rs  users.rs
rust-lib/src/db/: client.rs
rust-lib/src/dto/portal/: channel.rs  message.rs  mod.rs  portal_platform.rs  source_platform.rs  tag.rs  user.rs
rust-lib/src/env/: environment.rs  load_env.rs  mod.rs  variable.rs
rust-lib/src/portal/: author.rs  channle.rs  message.rs  mod.rs  portal_platform.rs  source_platform.rs  tag.rs  user.rs
rust-lib/src/queue/: config.rs  mod.rs  pool.rs  queue.rs
rust-lib/src/queue/config/: portal_messsage.rs
rust-lib/src/rabbitmq/: config.rs
rust-lib/src/redis/: client.rs
rust-lib/src/twitter/: stream.rs
slack-message-sender/: Cargo.toml
slack-message-sender/src/: main.rs
twitter-list-observer/: .gitignore  Cargo.toml  Dockerfile
twitter-list-observer/src/: di.rs  domain.rs  lib.rs  main.rs
twitter-list-observer/src/domain/: service.rs
twitter-list-observer/src/domain/model/: rule.rs  tag.rs  user.rs
twitter-list-observer/src/domain/repository/: tag_repository.rs
twitter-list-observer/src/domain/service/: rule_api_service.rs  rule_service.rs
twitter-list-observer/src/env/: mod.rs  variable.rs
twitter-list-observer/src/infrastructure/: sea_orm.rs  twitter_api.rs
twitter-list-observer/src/infrastructure/sea_orm/: tag_repository.rs
twitter-list-observer/src/infrastructure/twitter_api/: RuleApiService.rs
twitter-list-observer/src/queue/: message.rs
twitter-list-observer/src/rule/: mod.rs  rule.rs  rule_client_impl.rs  rule_client_trait.rs  rule_part.rs  rule_text.rs  twitter_rule_text_factory_impl.rs
twitter-list-observer/src/tag/: mod.rs  tag.rs  tag_repository_impl.rs  tag_repository_trait.rs
twitter-list-observer/src/twitter/: client.rs  infrastructure.rs  message.rs  mod.rs  rules.rs  stream.rs  user.rs
twitter-list-observer/src/twitter/domain/: model.rs
twitter-list-observer/src/twitter/domain/model/: message.rs  tag.rs
twitter-list-observer/src/twitter/domain/service/: rule_service.rs
twitter-list-observer/src/twitter/infrastructure/twitter_api/: RuleApiService.rs
twitter-list-observer/src/user/: mod.rs  user.rs  user_repository_trait.rs
