[package]
name = "rust-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-serde = "0.8"
tokio-stream = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = "0.24"
strum_macros = "0.24"
time = { version = "0.3", features = ["serde", "serde-well-known"] }
chrono = "0.4.23"
lapin = { version = "2.0", features = ["rustls"] }
deadpool = "0.9.5"
deadpool-lapin = "0.10.0"
sea-orm = { version = "^0.10.0", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros", "with-chrono" ], default-features = false  }
sea-orm-migration = { version = "^0.10.0", features = [ "sqlx-postgres", "runtime-tokio-rustls" ], default-features = false  }
# surrealdb-rs = { git = "https://github.com/surrealdb/surrealdb.rs", version = "0.1.0" }
