[package]
name = "rust-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-serde = "0.8"
tokio-stream = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.24", features = ["derive"] }
strum_macros = "0.24"
chrono = { version = "0.4.23", features = ["serde"], default-features = false }
dotenv = "0.15.0"
lapin = { version = "2.0", features = ["rustls"], default-features = false }
deadpool = { version = "0.9.5", features = ["managed", "rt_tokio_1"], default-features = false }
deadpool-lapin = { version = "0.10.0", features = ["rt_tokio_1"], default-features = false }
sea-orm = { version = "^0.10.0", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "with-chrono"], default-features = false  }
sea-orm-migration = { version = "^0.10.0", features = ["sqlx-postgres", "runtime-tokio-rustls"], default-features = false  }
derive-getters = "0.2.0"
