[package]
name = "twitter-list-observer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-serde = "0.8"
tokio-stream = "0.1"
# strum = "0.24"
# strum_macros = "0.24"
rust-lib = { path = "../rust-lib" }

[dev-dependencies]
