[package]
name = "twitter-list-observer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-serde = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-stream = "0.1"
time = { version = "0.3", features = ["serde", "serde-well-known"] }
twitter-v2 = { git = "https://github.com/totto2727/twitter-v2-rs", rev ="d717a04f3fce245f62a7936308e7402d8e0c5c2a", default-features = false, features = ["rustls-tls"] }
tracing = "0.1"
tracing-subscriber = "0.3"
lapin = { version = "2.0", features = ["rustls"] }
deadpool = "0.9.5"
deadpool-lapin = "0.10.0"
rust-lib = { path = "../rust-lib" }
surrealdb-rs = { git = "https://github.com/surrealdb/surrealdb.rs", version = "0.1.0" }

[dev-dependencies]
